--- a/src/scss/config/base.scss
+++ b/src/scss/config/base.scss
@@ -24,19 +24,19 @@ body {
 // Стили отзывчивых картинок (IBG) ============================================
 [class*="-ibg"] {
   position: relative;
-	img {
+  img {
     position: absolute;
-		width: 100%;
-		height: 100%;
-		top: 0;
-		left: 0;
-		object-fit: cover;
-	}
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    object-fit: cover;
+  }
 }
 [class*="-ibg_contain"] {
   img {
     object-fit: contain;
-	}
+  }
 }
 // Стили для обертки модальных окон ===========================================
 [class*="_overlay-bg"] {
@@ -52,7 +52,8 @@ body {
   padding: rem(60) rem(15); // Изменить по макету
   overflow-y: auto;
   @include media(768) {
-    &::-webkit-scrollbar { // Удалить из за ненадобности
+    &::-webkit-scrollbar {
+      // Удалить из за ненадобности
       display: none;
     }
   }
@@ -71,6 +72,7 @@ body {
 .page {
   position: relative;
   flex: 1 1 auto;
+  z-index: 0;
 
   [data-observ] {
     position: absolute;
