--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,28 +1,29 @@
-@use 'sass:math';
+@use "sass:math";
 
 // Подключение шрифтов локально из папки "./src/fonts" =======================================================================================================================
-@import 'config/fonts';
+@import "config/fonts";
 
 // Подключение sass функций и миксинов и рассширений стилей =======================================================================================================================
-@import 'config/functions';
-@import 'config/mixins';
-@import 'config/patternSelectors';
+@import "config/functions";
+@import "config/mixins";
+@import "config/patternSelectors";
 
 // Подключение переменных =======================================================================================================================
-@import 'config/vars';
+@import "config/vars";
 
 // Обнуление =======================================================================================================================
-@import 'config/reset';
+@import "config/reset";
 
 // Подлючение кастомного скрола для всего сайта =======================================================================================================================
-@import 'config/scrollbar';
+@import "config/scrollbar";
 
 // Общие параметры, шаблоны(заготовки) и вспомагательные классы =======================================================================================================================
-@import 'config/base';
+@import "config/base";
 
 // БЕМ блоки используемые во всё проекте =======================================================================================================================
-@import 'config/common';
+@import "config/common";
 
 // Подключение стилей отдельных блоков и секций =======================================================================================================================
-@import 'layout/header';
-@import 'layout/footer';
+@import "layout/header";
+@import "layout/footer";
+@import "layout/lasting";
