--- a/src/scss/config/common.scss
+++ b/src/scss/config/common.scss
@@ -1,1 +1,7 @@
-// Заголовки, общие БЄМ блоки и проче...
+.button__fields {
+  border: 1px solid #20201f;
+  border-radius: 41.6429px;
+  background-color: unset;
+  padding: 13px 30px;
+
+}
