add tables style

--- a/src/scss/config/button.scss
+++ b/src/scss/config/button.scss
@@ -1,7 +1,6 @@
-.button__fields {
+.radius {
   border: 1px solid #20201f;
   border-radius: 41.6429px;
-  background-color: unset;
   padding: 13px 30px;
-
+  box-sizing: border-box;
 }
