--- a/src/scss/layout/tables.scss
+++ b/src/scss/layout/tables.scss
@@ -5,7 +5,13 @@
   &__info {
     &__container {
       width: 50%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      gap: 60px;
+      padding-left: 84px;
     }
+
     &__title {
       font-family: $font-roboto;
       font-style: normal;
@@ -14,7 +20,9 @@
       line-height: 68px;
       text-transform: lowercase;
       color: $blackColor;
+      width: 80%;
     }
+
     &__description {
       font-family: $font-work-sans;
       font-style: normal;
@@ -22,12 +30,42 @@
       font-size: 19px;
       line-height: 33px;
       color: $blackColor;
+      width: 90%;
+    }
+
+    &__buttons {
+      display: flex;
+      gap: 28px;
+      align-items: center;
     }
   }
 
   &__images {
     &__container {
       width: 50%;
+      display: flex;
+      flex-direction: column;
+      gap: 103px;
+    }
+
+    &__bottom {
+      display: flex;
+      justify-content: space-between;
+      align-items: flex-end;
+    }
+  }
+  
+  &__image {
+    display: flex;
+
+    &-table2 {
+      display: flex;
+      justify-content: flex-end;
+      padding: 35px 43px;
+    }
+
+    &-sofa {
+      padding-bottom: 61px;
     }
   }
 }
