--- a/src/scss/layout/collections.scss
+++ b/src/scss/layout/collections.scss
@@ -3,6 +3,7 @@
   display: flex;
   width: 100%;
   padding: 123px 0 46px 0;
+  justify-content: space-between;
 
   &__left {
     width: auto;
@@ -18,6 +19,7 @@
     display: flex;
     gap: 310px;
     flex-direction: column;
+    align-items: flex-end;
   }
 
   &__title {
