add photo & become & manages & form blocks

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -21,3 +21,7 @@
 @import "layout/collections";
 @import "layout/dealer";
 @import "layout/terrace";
+@import "layout/manages";
+@import "layout/become";
+@import "layout/photo";
+@import "layout/form";
