--- a/src/scss/layout/lasting.scss
+++ b/src/scss/layout/lasting.scss
@@ -1,6 +1,6 @@
 .lasting {
   background-image: url("../../images/IMAGE.svg");
-  background-position: center;
+  background-position: top center;
   background-repeat: no-repeat;
   background-size: cover;
   height: 800px;
@@ -19,6 +19,6 @@
     justify-content: center;
     line-height: 68px;
     text-transform: lowercase;
-    word-spacing: 87px;  
+    word-spacing: 87px;
   }
 }
