--- a/src/scss/config/reset.scss
+++ b/src/scss/config/reset.scss
@@ -3,15 +3,14 @@
   margin: 0;
   border: 0;
   box-sizing: border-box;
-  color: $fontColor;
 }
 
-*:before, 
+*:before,
 *:after {
   box-sizing: border-box;
 }
 
-:focus, 
+:focus,
 :active {
   outline: none;
 }
@@ -19,6 +18,10 @@
 a:focus,
 a:active {
   outline: none;
+}
+
+a {
+  color: unset;
 }
 
 nav,
@@ -30,12 +33,12 @@ aside {
 
 html,
 body {
-	width: 100%;
+  width: 100%;
   height: 100%;
-	font-size: $fontSize;
+  font-size: $fontSize;
   font-family: $fontFamily;
   font-weight: $fontWeight;
-	line-height: 1;
+  line-height: 1;
 }
 
 input,
@@ -50,7 +53,7 @@ input::-ms-clear {
 
 button {
   cursor: pointer;
-} 
+}
 
 button::-moz-focus-inner {
   padding: 0;
@@ -67,10 +70,10 @@ a {
   }
 }
 
-ul, 
+ul,
 li {
   list-style: none;
-} 
+}
 
 img {
   vertical-align: top;
@@ -82,7 +85,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-size:inherit;
+  font-size: inherit;
   font-weight: 400;
 }
 
