--- a/src/scss/layout/header.scss
+++ b/src/scss/layout/header.scss
@@ -1,11 +1,8 @@
-// =====================================================================================================================
 .header {
   z-index: 8;
   width: 100%;
+  position: fixed;
 
-  &.sticky {
-    // ..стили для липкого хедера
-  }
   &__container {
     align-items: center;
     display: flex;
@@ -20,55 +17,7 @@
     width: 100%;
   }
 }
-// =====================================================================================================================
 
-// Burger
-/*
-.icon-menu {
-  display: none;
-  @include media(767) {
-    display: block;
-    position: relative;
-    width: rem(30);
-    height: rem(18);
-    cursor: pointer;
-    z-index: 5;
-    span,
-    &::before,
-    &::after {
-      content: "";
-      transition: all 300ms ease 0ms;
-      right: 0;
-      position: absolute;
-      width: 100%;
-      height: rem(2);
-      background-color: #000;
-    }
-    &::before {
-      top: 0;
-    }
-    &::after {
-      bottom: 0;
-    }
-    span {
-      top: calc(50% - rem(1));
-    }
-    .menu-open & {
-      span {
-        width: 0;
-      }
-      &::before {
-        top: calc(50% - rem(1));
-        transform: rotate(-45deg);
-      }
-      &::after {
-        bottom: calc(50% - rem(1));
-        transform: rotate(45deg);
-      }
-    }
-  }
-}
-*/
 .menu {
   &__list {
     display: inline-flex;
@@ -84,4 +33,8 @@
     font-size: 19px;
     line-height: 23px;
   }
+}
+
+.sticky {
+  backdrop-filter: blur(6px) brightness(60%);
 }
