--- a/src/scss/layout/lasting.scss
+++ b/src/scss/layout/lasting.scss
@@ -1,5 +1,5 @@
 .lasting {
-  background-image: url("../../images/IMAGE.svg");
+  background-image: url("../images/IMAGE.svg");
   background-position: top center;
   background-repeat: no-repeat;
   background-size: cover;
